# Virtual-Fleet-IoT

./: .gitignore  README.md  check_measurements.py  docker-compose.yml  insert_degraded_battery.py  requirements.txt  test.db
backend/: Dockerfile  alembic.ini  fleet.db  test.db
backend/alembic/versions/: 14706d37507e_initial_migration_all_models_including_.py  1e2914925222_add_segment_fields.py  26e9b9db134f_add_fleet_settings_table.py  28af5958361e_update_server_defaults_for_device_model.py  29b1e1cddd63_initial_migration.py  2a3cba485576_add_rollout_status_to_firmware_model.py  2bea7bd3d8cf_add_lifecycle_state_auth_token_.py  37497b8f08bf_add_predicted_issue_to_device_model.py  4435b818ff09_add_metrics_summary_to_firmware.py  47b0e0f113ac_add_environment_to_device.py  52929076803a_add_metric_and_alert_models.py  64fd386e3956_add_sequence_number_to_measurement.py  8b28e230b84d_add_location_and_speed_to_measurement_.py  956e98956833_add_firmware_version_to_measurement_.py  ada577443c90_add_device_error_table.py  b9be5a18d8d6_add_signature_to_firmware_model.py  baae1f92cf26_add_config_flags_to_device_model.py  d4f08505e8bd_add_device_shadow_fields.py  e59fe03fc293_add_rollout_fields.py
backend/app/: database.py  main.py  models.py
backend/app/api/: devices.py  firmware.py  (+1 more)
device/: Cargo.toml  Dockerfile
device/src/: config.rs  main.rs  net.rs  ota.rs  simulate.rs  storage.rs  types.rs
device/src/tests/: integration_tests.rs
tools/: compute_metrics.py  fleet_control.py  generate_fake_firmware.py  publish_firmware.py  replay_events.py  rollout_control.py
(+11 files in other folders)
