[package]
name = "device"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
log = { version = "0.4", features = ["std"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
rand = "0.8"
lazy_static = "1.4"
